webpages/css/menu.css
body {
  background-color: rgb(150, 155, 156);
  display: block;
  margin: 0;
  padding: 0;
  margin-top: 0;
  font-family: "Raleway";
  background-image: url("../../images/backgrounds/menu.jpg");
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

* {
  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
  -moz-box-sizing: border-box; /* Firefox, other Gecko */
  box-sizing: border-box; /* Opera/IE 8+ */
}

.topnav {
  background-color: #333;
  position: fixed;
  top: 0;
  width: 100vw;
  z-index: 10;
  padding: 1vh;
}
#a-right {
  float: right;
}
#a-right:hover {
  background-color: inherit;
  color: white;
  cursor: default;
}
.topnav a {
  float: left;
  display: block;
  color: #f2f2f2;
  text-align: center;
  padding: 1vw 1.5vw;
  text-decoration: none;
  font-size: 1.25vw;
  margin-right: 0.5vw;
  transition: all 0.25s ease-in-out;
}
.topnav a:hover,
.dropdown:hover .drop-btn {
  background-color: #ddd;
  color: black;
  cursor: pointer;
  transition: all 0.5s ease;
}

.topnav a.active {
  border-bottom: 2px solid white;
}

.topnav a.active:hover {
  background-color: #333;
  color: white;
}

.topnav .icon {
  display: none;
}

.topnav a.mobile-number {
  display: none;
}
.topnav a.desktop-number {
  float: right;
}
.topnav a.desktop-number:hover {
  background-color: #333;
  color: white;
  cursor: default;
}

/* dropdown nav code */
.dropdown {
  float: left;
  overflow: hidden;
}
.dropdown .drop-btn {
  font-size: 1.25vw;
  border: none;
  outline: none;
  color: #f2f2f2;
  padding: 1vw 1.5vw;
  background-color: inherit;
  font-family: inherit;
  margin: 0;
}
.dropdown-content {
  display: none;
  position: absolute;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;
}
.dropdown-content a {
  float: none;
  color: black;
  text-decoration: none;
  padding: 1vw 1.5vw;
  display: block;
  text-align: left;
  margin: 0;
  font-size: 1vw;
}

.dropdown-content a:hover {
  background-color: purple;
  color: white;
}

.dropdown:hover .dropdown-content {
  background-color: #eee;
  display: block;
  z-index: 100;
}

/* MENU CODE */

.menunav {
  grid-area: nav;
  justify-self: center;
  width: 100%;
}
.menucontent {
  grid-area: cont;
}
.menuinfo {
  grid-area: opt;
}

.menu {
  background-color: rgba(51, 51, 51, 0.8);
  margin: auto;
  position: relative;
  top: 16vh;
  width: 80vw;
  height: 75vh;
  padding: 1vw;
  font-family: "Courier New", Courier, monospace;

  display: grid;
  grid-template-areas: "cont nav" "cont opt";
  grid-template-columns: 70fr 30fr;
  grid-template-rows: 82fr 18fr;
}

.menunav ul {
  font-family: Raleway;
  list-style-type: none;
  color: white;
  margin: 0;
  padding: 0;
}

.menunav ul li a {
  display: block;
  text-align: center;
  padding: 0.75vw 1.5vw 0.75vw 1.5vw;
  margin: 0.2vw;
  font-size: 1.2vw;
  transition: font-size 0.2s ease;
}
.menunav ul li a:hover {
  cursor: pointer;
}
.active2 {
  font-size: 1.9vw !important;
}

/* menu content */

.menucontent {
  padding: 1vw;
  color: white;
}
.menucontent .activemenu,
.menuinfo .activemenu {
  opacity: 1;
  transition: opacity 0.5s ease;
}
.menucontent div:not(.activemenu),
.menuinfo div:not(.activemenu) {
  opacity: 0;
  transition: opacity 0.5s ease;
}

.menucontent > div {
  position: absolute;
}

.menucontent div section {
  display: flex;
  flex-direction: column;
  align-content: flex-start;
  flex-wrap: wrap;
  height: 70vh;
  width: 60vw;
}

.menucontent div section section {
  width: 20vw;
  height: 14vh;
  margin: 0 5vw 0 0;
}

/* menu subsection css */
section h3 {
  font-size: 2vw;
}

.head {
  letter-spacing: 2px;
  font-size: 1.25vw;
}
.info {
  font-size: 1vw;
}
.price {
  font-size: 1vw;
}

.item p {
  margin: 0;
}
.footer {
  font-style: italic;
}

/* menu options css */
.menuinfo {
  text-align: center;
  color: white;
  font-size: 1vw;
  padding: 1vw;
}
.menuinfo p {
  margin: 0;
}
.menuinfo div {
  position: absolute;
  padding-right: 2vw;
  text-align: center;
  width: 29.25%;
}

/* ---------------------------------------------------------------------- */
/* Tablet Devices (Portait) --------------------------------------------- */
/* ---------------------------------------------------------------------- */
@media only screen and (min-width: 768px) and (max-width: 1024px) and (-webkit-min-device-pixel-ratio: 1.5) and (orientation: portrait) {
  .topnav a {
    font-size: 3vw;
    padding: 2vw 2.5vw;
  }
  .dropdown .drop-btn {
    font-size: 3vw;
    padding: 2vw 2.5vw;
  }
  .topnav a.mobile-number {
    display: none;
  }
  .topnav a.desktop-number {
    float: right;
  }
  .menunav ul {
    text-align: center;
  }
  .menunav ul li {
    display: inline-block;
  }
  .menu {
    grid-template-areas: "nav" "cont" "opt";
    grid-template-columns: 1fr;
    grid-template-rows: 10fr 70fr 10fr;
  }

  .menu p {
    font-size: 2vw;
  }

  .menunav ul li a {
    font-size: 2.5vw;
  }

  .active2 {
    text-decoration: underline;
    font-size: 2.5vw !important;
  }

  .menucontent div section {
    height: 60vh;
    width: 74vw;
  }
  .menucontent div section section {
    height: 18vh;
    width: 25vw;
    margin-right: 1vw;
  }

  .menuinfo div {
    position: absolute;
    left: 50%;
  }
  .menuinfo div p {
    position: absolute;
    left: -80%;
  }
}

/* ---------------------------------------------------------------------- */
/* Tablet Devices (Landscape) ------------------------------------------- */
/* ---------------------------------------------------------------------- */
@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
  .topnav a {
    font-size: 2vw;
    padding: 2vw 2.5vw;
  }
  .dropdown .drop-btn {
    font-size: 2vw;
    padding: 2vw 2.5vw;
  }

  .menunav ul li {
    padding-top: 1vh;
  }
  .menunav ul li a {
    font-size: 2vw;
  }
  .active2 {
    font-size: 2.5vw !important;
    text-decoration: underline;
  }

  .menucontent div section {
    width: 50vw;
  }
  /* classic burgers smaller height sections */
  [data-name="classic burgers"] section .item,
  [data-name="sides"] section .item {
    height: 14vh;
  }
  .menucontent div section section {
    height: 17vh;
    width: 24vw;
  }
  .menucontent div section section p {
    font-size: 1.7vw;
  }
  .menuinfo p {
    font-size: 1.5vw;
  }
}

/* ---------------------------------------------------------------------- */
/* Mobile Devices (Portait) --------------------------------------------- */
/* ---------------------------------------------------------------------- */
@media screen and (max-width: 600px) and (orientation: portrait) {
  .topnav a:not(.active) {
    display: none;
  }
  .topnav a.desktop-number {
    display: none !important;
  }
  .topnav a.active {
    background-color: #333;
  }
  .topnav a.icon {
    float: right;
    display: block;
  }
  .topnav a.icon.active {
    background-color: #333;
    color: white;
    border: none;
  }
  .topnav a.icon:hover {
    background-color: #333;
    color: white;
    border: none;
  }
  .topnav a {
    font-size: 4vw;
    padding: 4vw 4.5vw;
  }
  .topnav a.active {
    border: none;
    font-weight: bold;
  }
  .topnav a:hover {
    border-left: 2px solid white;
  }
  .topnav.responsive {
    position: fixed;
    width: 100%;
  }
  .topnav.responsive a.icon {
    position: absolute;
    right: 0;
    top: 0;
  }
  .topnav.responsive a {
    float: none;
    display: block;
    text-align: left;
  }
  #a-right {
    float: left;
  }

  .topnav .dropdown {
    display: none;
  }

  .topnav.responsive .dropdown {
    float: none;
    display: block;
  }
  .topnav.responsive .dropdown-content {
    position: relative;
  }
  .topnav.responsive .dropdown .drop-btn {
    display: block;
    text-align: left;
    font-size: 4vw;
    padding: 4vw 4.5vw;
  }

  /* MENU CSS */
  .menunav ul {
    text-align: center;
    margin-bottom: 1px solid white;
  }
  .menunav ul li {
    display: inline-block;
  }
  .menu {
    grid-template-areas: "nav" "cont" "opt";
    grid-template-columns: 1fr;
    grid-template-rows: 10fr 75fr 7fr;
  }
  .menu p {
    font-size: 2.5vw;
  }
  .menunav ul li a {
    font-size: 2.9vw;
  }
  .active2 {
    text-decoration: underline;
    font-size: 2.9vw !important;
  }
  .menucontent {
    padding: 0vw 2vw 0vw 2vw;
  }
  .menucontent div section {
    height: 60vh;
    width: 76.5vw;
  }
  .menucontent div section section {
    height: 15vh;
    width: 36.25vw;
    margin-right: 1vh;
  }

  /* max content sections */
  .menucontent div[data-name="classic burgers"] section section,
  .menucontent div[data-name="sides"] section section {
    height: 12vh;
  }
  /* min content sections */
  .menucontent div[data-name="gourmet burgers"] section,
  .menucontent div[data-name="kebabs"] section,
  .menucontent div[data-name="grilled chicken"] section,
  .menucontent div[data-name="fish and chips"] section {
    width: 40vw;
    margin-left: 22%;
  }
  .menucontent div[data-name="gourmet burgers"] section section,
  .menucontent div[data-name="kebabs"] section section,
  .menucontent div[data-name="grilled chicken"] section section,
  .menucontent div[data-name="fish and chips"] section section {
    height: 10vh;
    width: 40vw;
    text-align: center;
  }
  /* medium content section */

  .menuinfo div {
    position: absolute;
    left: 18%;
    width: 65%;
  }
}

/* ---------------------------------------------------------------------- */
/* Mobile Devices (Landscape) ------------------------------------------- */
/* ---------------------------------------------------------------------- */
@media screen and (min-width: 600px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
  body {
    height: 100vh;
  }
  .topnav a,
  .dropdown .drop-btn {
    font-size: 3vw;
    padding: 2vw 2.5vw;
  }

  /* MENU CSS */

  .menunav {
    position: fixed;
    width: inherit;
    padding-right: 2vw;
  }
  .menunav ul li a {
    font-size: 2vw;
    text-align: right;
  }
  .active2 {
    font-size: 2vw !important;
    text-decoration: underline;
  }
  .menuinfo {
    position: relative;
    display: none;
  }
  .menuinfo div {
    width: 100%;
    font-size: 1.5vw !important;
  }
  .menucontent div section {
    display: block;
  }
  .menucontent div section section {
    width: 80%;
    height: 20vh;
    margin: 0;
  }

  .menu {
    grid-template-areas: "cont nav";
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 1fr;
    top: 20vh;
    width: 95vw;
    overflow-y: scroll;
  }

  .menu p {
    font-size: 2vw;
  }
}

